styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

@font-face {
    font-family: norse;
    src: url(Norse-Bold.otf);
}

body {
    min-height: 100vh;
}

.card__container { 
    min-height: 100vh;
    position: relative;
    width: 35%
}

.card-img { 
    position: absolute;
    min-height: 100vh;
    width: 35%;
    z-index: -1;
    transition: opacity ease-out 250ms;
    opacity: 1;
}

.card-body {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    width: 35%;
    height: 100px;
    background: black;
    opacity: 0.6;
    color: white;
    top: 7rem;
    font-size: 1.2em;
    font-family: roboto;
}

h3 { 
    color: white;
    font-family: norse;
    font-size: 40px;
}

.card-container:hover .card-img {
    opacity: 0.6;
}

.container { 
    position: relative;
    display: flex;
    flex-direction: column;
    width: 65%;
    margin-left: 35%;
    background-color: black;
    height: 100vh;
    color: whitesmoke;
}

.words { 
    margin-top: 100px;
    margin-left: 20px;
    margin-right: 150px;
}

.one {
    margin-bottom: 15px;
}

.two {
    margin-bottom: 40px;
}

button {
    width: 150px;
    height: 40px;
    color: white;
    background-color: black;
    border-radius: 3px;
    box-shadow: 5px 10px 8px #888888;
    transition-duration: 0.4s;
    margin-left: 20px;
    margin-top: 20px;
}

button:hover { 
    background-color: whitesmoke;
    color: black;
}

.final { 
    margin-left: 20px;
    margin-top: 20px;
}

.wrapper { 
    background-color: whitesmoke;
    padding-left: 20px;
    padding-bottom: 30px;
    color: black;
}

.three {
    margin-top: 20px;
    margin-bottom: 20px;
}


input { 
    display: block;
    width: 300px;
}

form {
    display: flex;
    flex-wrap: wrap;
    gap: 35px;
}

a {
    text-decoration: none;
    color: darkgray;
}

